Template Images added

--- a/EchoBotV3/EchoBotV3.csproj
+++ b/EchoBotV3/EchoBotV3.csproj
@@ -154,6 +154,7 @@
     <Content Include="packages.config">
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="EchoBotV3.bot" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
